# TermAVG

./: Cargo.toml  README.md  game_setting.toml  layout.toml  setting.toml  ve_z_index.txt
doc/: README_zh.md
resource/: about.txt  script_example.fs  script_example.fss
tmj_app/: Cargo.toml
tmj_app/src/: app.rs  audio.rs  game.rs  game_setting.rs  gameflow.rs  layout.rs  lib.rs  setting.rs
tmj_app/src/art/: effect.rs  halfblock.rs  mod.rs  theme.rs
tmj_app/src/pages/: dialogue.rs  load.rs  mainmenu.rs  mod.rs  save.rs  script_reader.rs  slot.rs
tmj_app/src/pages/behaviour/: background.rs  behaviour.rs  chapter.rs  character_ls.rs  dialogue_frame.rs  layers.rs  mod.rs  paragraph.rs  render_ve.rs  ve_z_index.rs  visual_element.rs
tmj_app/src/pages/behaviour/animation/: alpha_shift.rs  bytes_stream.rs  error.rs  glitch.rs  heart_beat.rs  img_trans.rs  mod.rs  offset_shift.rs  rect_trans.rs  typewriter.rs
tmj_app/src/pages/pipeline/: background.rs  behaviour.rs  chapter.rs  dialogue_frame.rs  paragraph.rs  visual_element.rs
tmj_app/src/pages/pipeline/animation/: img_trans.rs  typewriter.rs
tmj_app/src/pages/pop_items/: about_content.rs  cmd.rs  gallery_ls.rs  game_setting.rs  history.rs  history_ls.rs  load.rs  mod.rs  save.rs
tmj_app/src/pages/script_def/: character.rs  env.rs  layer.rs  mod.rs  text_obj.rs  var_bg.rs  var_bgm.rs  var_chapter.rs  var_character_ls.rs  var_env_effect.rs  var_frame.rs  var_layer_ls.rs  var_paragraph.rs  var_voice.rs
tmj_app/src/utils/: mod.rs  script_args.rs  script_preparser.rs  script_sym.rs
tmj_app/tests/: dialogue_spawn_smoke.rs
tmj_core/: Cargo.toml
tmj_core/src/: audio.rs  command.rs  event.rs
tmj_core/src/event/: looper.rs  provider.rs
tmj_core/src/img/: shape.rs
tmj_core/src/script/: command.rs  command_executor.rs  context.rs  interpreter.rs  mod.rs  parser.rs  session.rs  table.rs  task_queue.rs  value.rs
tmj_egui/: Cargo.toml
tmj_egui/src/: main.rs
tmj_macro/: Cargo.toml
tmj_macro/src/: lib.rs
tmj_terminal/: Cargo.toml
tmj_terminal/src/: main.rs
