[workspace]
resolver = "3"
members = [
    "tmj_app",
    "tmj_core",
    "tmj_egui",
    "tmj_macro",
    "tmj_terminal",
]

[workspace.lints.clippy]
assigning_clones = "allow"
type_complexity = "allow"
map_clone = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
manual_range_contains = "allow"

[patch.crates-io]
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator.git" }

[workspace.dependencies]
crossterm = { version = "0.29.0" }
ratatui = {version = "0.30.0", features = ["unstable-rendered-line-info"]}
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
json5 = { version = "1.3.1" }

strum = { version = "0.27.2" }
strum_macros =  {version = "0.27.0"}
anyhow = "1.0"

chrono = "0.4"
home = "0.5"
flexi_logger = { version = "0.29", default-features = false }
image = { version = "0.25", default-features = false, features = [ "png" ] }
lazy_static = "1"

rand = "0.9"
rand_chacha = "0.9"
rodio = { version = "0.20", features = [ "vorbis" ] }
tracing = "0.1"
tracing-subscriber = "0.3"
educe = { version = "0.6.0"}
